--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- * git remote add origin https://github.com/fateme-nabati/painting-website.git
+* git push -u origin main
+ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,7 +30,6 @@
 
 <header>
 
-<!-- ! HEADER-->                      
   <!-- ! NAVBAR -->
   <nav class="autohide navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,7 +69,8 @@
   </nav>
   
   
-   <!-- ! Background image -->
+   <!-- ! Background Image For Header -->
+   <section class="home" id="home">
    <div class="p-5 text-center bg-image" id="bg-header" style="
    background-image: url('1.jpg');
    height: 500px;">
@@ -81,30 +84,10 @@
      </div>
  </div>
 
-  <!-- <div id="menu-bar" class="fas fa-bars"></div>
 
-  <a href="#" class="logo"><span>T</span>ravel</a>
+</section>
 
-  <nav class="navbar">
-    <a href="#home">home</a>
-    <a href="#book">book</a>
-    <a href="#packages">packages</a>
-    <a href="#services">services</a>
-    <a href="#gallery">gallery</a>
-    <a href="#review">review</a>
-    <a href="#contact">contact</a>
-  </nav> -->
 
-  <!-- <div class="icons">
-    <i class="fas fa-search" id="search-btn"></i>
-    <i  id="login-btn">Sign in</i>
-    <i  id="signup-btn">Sign up</i>
-  </div> -->
-
-  <!-- <form action="" class="search-bar-container">
-    <input type="search" id="search-bar" placeholder="search here...">
-    <label for="search-bar" class="fas fa-search"></label>
-  </form>  -->
 
 
 <!-- ! SIGN UP FORM -->
@@ -156,8 +139,6 @@
       </div>
       <div class="modal-footer">
           <p>do you have an account? <a href="#">sign in</a></p> 
-        <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-        <!-- <button type="button" class="btn btn-primary">Send message</button> -->
       </div>
     </div>
   </div>
@@ -203,32 +184,47 @@
 
 </header>
 
-<!-- <div class="login-form-container">
-  <i class="fas fa-times" id="form-close"></i>
-  <form action="">
-    <h3>sign in</h3>
-    <input type="email" class="box" placeholder="enter your email">
-    <input type="password" class="box" placeholder="enter your password">
-    <input type="submit" value="login now" class="btn">
-    <input type="checkbox" id="remember">
-    <label for="remember">remember me</label>
-    <p>forget password? <a href="#">click here</a></p>
-  </form>
-</div>
- -->
-<!-- <div class="signup-form-container">
-  <i class="fas fa-times" id="signup-close"></i>
-  <form action="">
-    <h3>sign up</h3>
-    <input type="email" class="box" placeholder="email">
-    <input type="password" class="box" placeholder="password">
-    <input type="password" class="box" placeholder="confirm password">
-    <input type="submit" value="sign up" class="btn">
-  </form>
-</div> -->
+ <!-- ! SERVICES -->
+<section id="services">
 
-<section class="home" id="home">
+  <h1 class="heading">
+    <span>s</span>
+    <span>e</span>
+    <span>r</span>
+    <span>v</span>
+    <span>i</span>
+    <span>c</span>
+    <span>e</span>
+    <span>s</span>
+  </h1>
+
+  <h3>We help you to learn your desired types of painting with different tools including : </h3> <br>
   <div class="row">
+    <div class="col-lg-3 col-md-6 col-sm-12 text-center">
+      <img src="assets/colour.png" class="img-fluid center-block d-block mx-auto" style="height: 200px; width: 200px;"> <br>
+      <h4>Colored pencils</h4>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 text-center">
+      <img src="assets/oil-paint.png" class="img-fluid center-block d-block mx-auto" style="height: 200px; width: 200px;"> <br> 
+      <h4>Oil paint</h4>
+
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 text-center">
+      <img src="assets/watercolor.png" class="img-fluid center-block d-block mx-auto" style="height: 200px; width: 200px;"> <br>
+      <h4>Wate color</h4>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 text-center">
+      <img src="assets/black-pen.png" class="img-fluid center-block d-block mx-auto" style="height: 200px; width: 200px;"> <br>
+      <h4>Black pen</h4>
+    </div>
+  
+  </div>
+  
+</section>
+
+
+<!-- <section class="home" id="home">
+  <div class="row"> -->
     <!-- <div class="content">
       <h3>upto 75% off</h3>
       <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
@@ -244,8 +240,8 @@
       </div>
       <img src="assets/stand.png" class="stand" alt="">
     </div> -->
-  </div>
-</section>
+  <!-- </div>
+</section> -->
 
 <!-- <section class="book" id="book">
 
