--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<!-- * git remote add origin https://github.com/fateme-nabati/painting-website.git
-* git push -u origin main
- -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,6 +19,7 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> 
   <link rel="stylesheet" href="style.css"> 
+
   
 
 </head>
@@ -43,17 +41,15 @@
           <a class="nav-link" href="#home">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#book" tabindex="-1" aria-disabled="true">Book</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#packages" tabindex="-1" aria-disabled="true">Packages</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="#services" tabindex="-1" aria-disabled="true">Services</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#gallery" tabindex="-1" aria-disabled="true">Gallery</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#packages" tabindex="-1" aria-disabled="true">Packages</a>
+        </li>
+
         <li class="nav-item">
           <a class="nav-link" href="#contact" tabindex="-1" aria-disabled="true">Cotact us</a>
         </li>
@@ -222,70 +218,87 @@
   
 </section>
 
+<!-- ! GALLERY  -->
+<section id="gallery">
+  <h1 class="heading">
+    <span>g</span>
+    <span>a</span>
+    <span>l</span>
+    <span>l</span>
+    <span>e</span>
+    <span>r</span>
+    <span>y</span>
+  </h1>
+  <div class="row">
+  
+    <div class="col-lg-3 col-md-6 col-sm-12 text-center" >
+      <img src="assets/1.jpg" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 text-center">
+      <img src="assets/2.jpg" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br> 
 
-<!-- <section class="home" id="home">
-  <div class="row"> -->
-    <!-- <div class="content">
-      <h3>upto 75% off</h3>
-      <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-      <a href="#" class="btn">Buy tickets</a>
-    </div> -->
-    <!-- <div class="swiper books-slider">
-      <div class="swiper-wrapper">
-        <a href="#" class="swiper-slide"><img src="assets/argentina.png" alt=""></a>
-        <a href="#" class="swiper-slide"><img src="assets/european-union.png" alt=""></a>
-        <a href="#" class="swiper-slide"><img src="assets/hong-kong.png" alt=""></a>
-        <a href="#" class="swiper-slide"><img src="assets/germany.png" alt=""></a>
-        <a href="#" class="swiper-slide"><img src="assets/netherlands.png" alt=""></a>
-      </div>
-      <img src="assets/stand.png" class="stand" alt="">
-    </div> -->
-  <!-- </div>
-</section> -->
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 text-center">
+      <img src="assets/3.jpg" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 text-center">
+      <img src="assets/6.webp" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br>
+    </div>
+  
+  
+</section>
 
-<!-- <section class="book" id="book">
+</div>
+<div id="show_image_popup">
+  <div class="close-btn-area">
+    <button id="close-btn">X</button> 
+  </div>
+  <div id="image-show-area">
+    <img id="large-image" src="assets/1.jpg" alt=""> 
+  </div>
+</div>  
+
+<!-- <section class="contact" id="contact">
 
   <h1 class="heading">
-    <span>b</span>
+    <span>c</span>
     <span>o</span>
-    <span>o</span>
-    <span>k</span>
-    <span class="space"></span>
     <span>n</span>
-    <span>o</span>
-    <span>w</span>
+    <span>t</span>
+    <span>a</span>
+    <span>c</span>
+    <span>t</span>
   </h1>
 
   <div class="row">
- -->
-    <!-- <div class="image">
-      <img src="assets/booking.png" alt="">
-    </div> 
- 
+
+    <div class="info col-lg-3 col-md-6 col-sm-12">
+      <p>Contact us through the following ways: </p><br>
+      <p><i class="fas fa-map-marker-alt"></i> Hamedan, Iran</p>
+      <p><i class="fas fa-mobile-alt"></i> +98 123456789</p> 
+      <p><i class="fas fa-envelope"></i> myEmail@gmail.com</p>
+    </div>
+
+    <div class="col-lg-9 col-md-6 col-sm-12">
     <form action="">
       <div class="inputBox">
-        <h3>where to</h3>
-        <input type="text" placeholder="place name">
+        <input type="text" placeholder="name">
+        <input type="email" placeholder="email">
       </div>
       <div class="inputBox">
-        <h3>how many</h3>
-        <input type="number" placeholder="number of guests">
+        <input type="number" placeholder="number">
+        <input type="text" placeholder="subject">
       </div>
-      <div class="inputBox">
-        <h3>arrivals</h3>
-        <input type="date">
-      </div>
-      <div class="inputBox">
-        <h3>leaving</h3>
-        <input type="date">
-      </div>
-      <input type="submit" class="btn" value="book now">
+      <textarea placeholder="message" name="" id="" cols="30" rows="10"></textarea>
+      <input type="submit" id="submit_btn" value="send message">
     </form>
+  </div>
 
   </div>
 
 </section>
  -->
+
 <!-- <section class="packages" id="packages">
 
   <h1 class="heading">
@@ -688,5 +701,6 @@
 
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <script src="javascript.js"></script>
+
 </body>
 </html> 
