--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   </div>
 </div>  
 
-<!-- <section class="contact" id="contact">
+<section class="contact" id="contact">
 
   <h1 class="heading">
     <span>c</span>
@@ -272,14 +272,14 @@
 
   <div class="row">
 
-    <div class="info col-lg-3 col-md-6 col-sm-12">
+    <div class="info col-lg-4 col-md-6 col-sm-12">
       <p>Contact us through the following ways: </p><br>
       <p><i class="fas fa-map-marker-alt"></i> Hamedan, Iran</p>
       <p><i class="fas fa-mobile-alt"></i> +98 123456789</p> 
       <p><i class="fas fa-envelope"></i> myEmail@gmail.com</p>
     </div>
 
-    <div class="col-lg-9 col-md-6 col-sm-12">
+    <div class="col-lg-8 col-md-6 col-sm-12">
     <form action="">
       <div class="inputBox">
         <input type="text" placeholder="name">
@@ -297,7 +297,7 @@
   </div>
 
 </section>
- -->
+
 
 <!-- <section class="packages" id="packages">
 
