--- a/index.html
+++ b/index.html
@@ -232,23 +232,29 @@
   <div class="row">
   
     <div class="col-lg-3 col-md-6 col-sm-12 text-center" >
-      <img src="assets/1.jpg" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br>
+      <img data-enlargable src="assets/1.jpg" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br>
+      <p>Click on picture to see it in full size form</p>
     </div>
+    
     <div class="col-lg-3 col-md-6 col-sm-12 text-center">
-      <img src="assets/2.jpg" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br> 
+      <img data-enlargable src="assets/4.jpg" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br> 
+      <p>Click on picture to see it in full size form</p>
+    </div>
 
-    </div>
     <div class="col-lg-3 col-md-6 col-sm-12 text-center">
-      <img src="assets/3.jpg" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br>
+      <img data-enlargable src="assets/3.jpg" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br>
+      <p>Click on picture to see it in full size form</p>
     </div>
+
     <div class="col-lg-3 col-md-6 col-sm-12 text-center">
-      <img src="assets/6.webp" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br>
+      <img data-enlargable src="assets/6.webp" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br>
+      <p>Click on picture to see it in full size form</p>
     </div>
   
   
 </section>
 
-</div>
+<!-- </div>
 <div id="show_image_popup">
   <div class="close-btn-area">
     <button id="close-btn">X</button> 
@@ -257,7 +263,7 @@
     <img id="large-image" src="assets/1.jpg" alt=""> 
   </div>
 </div>  
-
+ -->
 <section class="contact" id="contact">
 
   <h1 class="heading">
