add Footer section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
    height: 500px;">
      <div class="d-flex justify-content-center align-items-center h-100">
        <div class="text-white">
-         <h1 class="mb-3">Draw and enjoy :)</h1>
+         <h1 class="mb-3">Draw Your Dreams :)</h1>
          <br>
          <h5 class="mb-3">Life is a painting, and you are the artist.</br> You have on your palette all the colors in the spectrum </br> the same ones available to Michaelangelo and DaVinci(Paul J. Meyer)</h5>
          <a class="btn btn-outline-light btn-lg" href="#!" role="button">Start learning to draw</a>
@@ -235,7 +235,7 @@
       <img data-enlargable src="assets/1.jpg" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br>
       <p>Click on picture to see it in full size form</p>
     </div>
-    
+
     <div class="col-lg-3 col-md-6 col-sm-12 text-center">
       <img data-enlargable src="assets/4.jpg" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br> 
       <p>Click on picture to see it in full size form</p>
@@ -278,13 +278,6 @@
 
   <div class="row">
 
-    <div class="info col-lg-4 col-md-6 col-sm-12">
-      <p>Contact us through the following ways: </p><br>
-      <p><i class="fas fa-map-marker-alt"></i> Hamedan, Iran</p>
-      <p><i class="fas fa-mobile-alt"></i> +98 123456789</p> 
-      <p><i class="fas fa-envelope"></i> myEmail@gmail.com</p>
-    </div>
-
     <div class="col-lg-8 col-md-6 col-sm-12">
     <form action="">
       <div class="inputBox">
@@ -296,8 +289,15 @@
         <input type="text" placeholder="subject">
       </div>
       <textarea placeholder="message" name="" id="" cols="30" rows="10"></textarea>
-      <input type="submit" id="submit_btn" value="send message">
+      <input class="btn btn-primary" type="submit" id="submit_btn" value="send message">
     </form>
+  </div>
+
+  <div class="info col-lg-4 col-md-6 col-sm-12">
+    <p>Contact us through the following ways: </p><br>
+    <p><i class="fas fa-map-marker-alt"></i> Hamedan, Iran</p>
+    <p><i class="fas fa-mobile-alt"></i> +98 123456789</p> 
+    <p><i class="fas fa-envelope"></i> myEmail@gmail.com</p>
   </div>
 
   </div>
@@ -426,55 +426,6 @@
 
 </section>
  -->
-<!-- <section class="services" id="services">
-
-  <h1 class="heading">
-    <span>s</span>
-    <span>e</span>
-    <span>r</span>
-    <span>v</span>
-    <span>i</span>
-    <span>c</span>
-    <span>e</span>
-    <span>s</span>
-  </h1>
-
-  <div class="box-container">
-
-    <div class="box">
-      <i class="fas fa-hotel"></i>
-      <h3>affordable hotels</h3>
-      <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-    </div>
-    <div class="box">
-      <i class="fas fa-utensils"></i>
-      <h3>food and drinks</h3>
-      <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-    </div>
-    <div class="box">
-      <i class="fas fa-bullhorn"></i>
-      <h3>safe guide</h3>
-      <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-    </div>
-    <div class="box">
-      <i class="fas fa-globe-asia"></i>
-      <h3>around the world</h3>
-      <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-    </div>
-    <div class="box">
-      <i class="fas fa-plane"></i>
-      <h3>fastest travel</h3>
-      <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-    </div>
-    <div class="box">
-      <i class="fas fa-hiking"></i>
-      <h3>adventures</h3>
-      <p> Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-    </div>
-
-  </div>
-
-</section> -->
 
 <!-- <section class="gallery" id="gallery">
 
@@ -675,35 +626,40 @@
 
 </section>
  -->
-<!-- <section class="footer">
+<section class="footer">
 
   <div class="box-container">
 
     <div class="box">
       <h3>about us</h3>
-      <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
+      <p>We are here to help you learn painting easily. stay with us!</p>
     </div>
+
     <div class="box">
-      <h3>branch locations</h3>
-      <a href="#">paris</a>
-      <a href="#">japan</a>
-      <a href="#">france</a>
+      <h3>Introduction of painting tutorials</h3>
+      <a href="https://thevirtualinstructor.com/blog/" target="_blank">The virtual instructor</a>
+      <a href="https://mypaintingclub.com/" target="_blank">My painting club</a>
+      <a href="http://guidetooilpainting.com/index.html" target="_blank">Guide tooil painting</a>
+      <a href="https://tucsonartacademyonline.com/courses" target="_blank">Tucson Art Academy Online</a>
+
     </div>
     <div class="box">
       <h3>quick links</h3>
-      <a href="#">home</a>
-      <a href="#">book</a>
-      <a href="#">packages</a>
-      <a href="#">services</a>
-      <a href="#">gallery</a>
-      <a href="#">review</a>
-      <a href="#">contact</a>
+      <a href="#home">home</a>
+      <a href="#services">services</a>
+      <a href="#gallery">gallery</a>
+      <a href="#review">review</a>
+      <a href="#contact">contact</a>
+    </div>
+
+    <div class="box" id="up">
+      <a href="#"><i  class="fas fa-angle-up"></i></a>
     </div>
 
   </div>
 </section> 
 
- -->
+
 
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <script src="javascript.js"></script>
