--- a/index.html
+++ b/index.html
@@ -40,14 +40,17 @@
         <li class="nav-item active">
           <a class="nav-link" href="#home">Home<span class="sr-only">(current)</span></a>
         </li>
+
         <li class="nav-item">
           <a class="nav-link" href="#services" tabindex="-1" aria-disabled="true">Services</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#works" tabindex="-1" aria-disabled="true">Works</a>
+        </li>
+
         <li class="nav-item">
           <a class="nav-link" href="#gallery" tabindex="-1" aria-disabled="true">Gallery</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#packages" tabindex="-1" aria-disabled="true">Packages</a>
         </li>
 
         <li class="nav-item">
@@ -68,7 +71,7 @@
    <!-- ! Background Image For Header -->
    <section class="home" id="home">
    <div class="p-5 text-center bg-image" id="bg-header" style="
-   background-image: url('1.jpg');
+   background-image: url('assets/header.jpg');
    height: 500px;">
      <div class="d-flex justify-content-center align-items-center h-100">
        <div class="text-white">
@@ -184,14 +187,14 @@
 <section id="services">
 
   <h1 class="heading">
-    <span>s</span>
-    <span>e</span>
-    <span>r</span>
-    <span>v</span>
-    <span>i</span>
-    <span>c</span>
-    <span>e</span>
-    <span>s</span>
+    <span>S</span>
+    <span>E</span>
+    <span>R</span>
+    <span>V</span>
+    <span>I</span>
+    <span>C</span>
+    <span>E</span>
+    <span>S</span>
   </h1>
 
   <h3>We help you to learn your desired types of painting with different tools including : </h3> <br>
@@ -218,62 +221,162 @@
   
 </section>
 
+<!-- ! WORKS -->
+<section class="center-block" id="works">
+
+  <h1 class="heading">
+    <span>W</span>
+    <span>O</span>
+    <span>R</span>
+    <span>K</span>
+    <span>S</span>
+  </h1>
+
+  <div id="carouselControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="assets/1.jpg" alt="First slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>first image</h5>
+          <p>this is my first image</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/2.jpg" alt="Second slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>second image</h5>
+          <p>this is my second image</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/3.jpg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>third image</h5>
+          <p>this is my third image</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/4.jpg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>fourth image</h5>
+          <p>this is my fourth image</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/5.jpg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>fifth image</h5>
+          <p>this is my fifth image</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/6.jpg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>sixth image</h5>
+          <p>this is my sixth image</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/7.jpg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>seventh image</h5>
+          <p>this is my seventh image</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/8.jpg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>eighth image</h5>
+          <p>this is my eighth image</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/9.jpg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>ninth image</h5>
+          <p>this is my ninth image</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/10.jpg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>tenth image</h5>
+          <p>this is my tenth image</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/11.jpeg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>eleventh image</h5>
+          <p>this is my eleventh image</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/12.jpg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>twelfth image</h5>
+          <p>this is my twelfth image</p>
+        </div>
+      </div>
+
+    </div>
+    <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</section>
+
 <!-- ! GALLERY  -->
 <section id="gallery">
   <h1 class="heading">
-    <span>g</span>
-    <span>a</span>
-    <span>l</span>
-    <span>l</span>
-    <span>e</span>
-    <span>r</span>
-    <span>y</span>
+    <span>G</span>
+    <span>A</span>
+    <span>L</span>
+    <span>L</span>
+    <span>E</span>
+    <span>R</span>
+    <span>Y</span>
   </h1>
-  <div class="row">
-  
+
+  <div class="row"> 
     <div class="col-lg-3 col-md-6 col-sm-12 text-center" >
-      <img data-enlargable src="assets/1.jpg" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br>
+      <img data-enlargable src="assets/g1.jpg" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br>
       <p>Click on picture to see it in full size form</p>
     </div>
 
     <div class="col-lg-3 col-md-6 col-sm-12 text-center">
-      <img data-enlargable src="assets/4.jpg" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br> 
+      <img data-enlargable src="assets/g2.jpg" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br> 
       <p>Click on picture to see it in full size form</p>
     </div>
 
     <div class="col-lg-3 col-md-6 col-sm-12 text-center">
-      <img data-enlargable src="assets/3.jpg" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br>
+      <img data-enlargable src="assets/g3.jpg" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br>
       <p>Click on picture to see it in full size form</p>
     </div>
 
     <div class="col-lg-3 col-md-6 col-sm-12 text-center">
-      <img data-enlargable src="assets/6.webp" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br>
+      <img data-enlargable src="assets/g4.webp" class="img-fluid center-block d-block mx-auto rounded-circle small-image" style="height: 200px; width: 200px;"> <br>
       <p>Click on picture to see it in full size form</p>
     </div>
   
   
 </section>
 
-<!-- </div>
-<div id="show_image_popup">
-  <div class="close-btn-area">
-    <button id="close-btn">X</button> 
-  </div>
-  <div id="image-show-area">
-    <img id="large-image" src="assets/1.jpg" alt=""> 
-  </div>
-</div>  
- -->
 <section class="contact" id="contact">
 
   <h1 class="heading">
-    <span>c</span>
-    <span>o</span>
-    <span>n</span>
-    <span>t</span>
-    <span>a</span>
-    <span>c</span>
-    <span>t</span>
+    <span>C</span>
+    <span>O</span>
+    <span>N</span>
+    <span>T</span>
+    <span>A</span>
+    <span>C</span>
+    <span>T</span>
   </h1>
 
   <div class="row">
@@ -305,127 +408,6 @@
 </section>
 
 
-<!-- <section class="packages" id="packages">
-
-  <h1 class="heading">
-    <span>p</span>
-    <span>a</span>
-    <span>c</span>
-    <span>k</span>
-    <span>a</span>
-    <span>g</span>
-    <span>e</span>
-    <span>s</span>
-  </h1>
-
-  <div class="box-container">
-
-    <div class="box">
-      <img src="assets/brazil.jpg" alt="">
-      <div class="content">
-        <h3> <i class="fas fa-map-marker-alt"></i> Brazil </h3>
-        <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries!</p>
-        <div class="stars">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="far fa-star"></i>
-        </div>
-        <div class="price"> $90.00 <span>$120.00</span> </div>
-        <a href="#" class="btn">book now</a>
-      </div>
-    </div>
-
-    <div class="box">
-      <img src="assets/moscow.jpg" alt="">
-      <div class="content">
-        <h3> <i class="fas fa-map-marker-alt"></i> moscow </h3>
-        <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-        <div class="stars">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="far fa-star"></i>
-        </div>
-        <div class="price"> $90.00 <span>$120.00</span> </div>
-        <a href="#" class="btn">book now</a>
-      </div>
-    </div>
-
-    <div class="box">
-      <img src="assets/german.jpg" alt="">
-      <div class="content">
-        <h3> <i class="fas fa-map-marker-alt"></i> German </h3>
-        <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-        <div class="stars">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="far fa-star"></i>
-        </div>
-        <div class="price"> $90.00 <span>$120.00</span> </div>
-        <a href="#" class="btn">book now</a>
-      </div>
-    </div>
-
-    <div class="box">
-      <img src="assets/paris.jpg" alt="">
-      <div class="content">
-        <h3> <i class="fas fa-map-marker-alt"></i> paris </h3>
-        <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries!</p>
-        <div class="stars">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="far fa-star"></i>
-        </div>
-        <div class="price"> $90.00 <span>$120.00</span> </div>
-        <a href="#" class="btn">book now</a>
-      </div>
-    </div>
-
-    <div class="box">
-      <img src="assets/tokyo.jpg" alt="">
-      <div class="content">
-        <h3> <i class="fas fa-map-marker-alt"></i> tokyo </h3>
-        <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-        <div class="stars">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="far fa-star"></i>
-        </div>
-        <div class="price"> $90.00 <span>$120.00</span> </div>
-        <a href="#" class="btn">book now</a>
-      </div>
-    </div>
-
-    <div class="box">
-      <img src="assets/venice.jpg" alt="">
-      <div class="content">
-        <h3> <i class="fas fa-map-marker-alt"></i> venice </h3>
-        <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-        <div class="stars">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="far fa-star"></i>
-        </div>
-        <div class="price"> $90.00 <span>$120.00</span> </div>
-        <a href="#" class="btn">book now</a>
-      </div>
-    </div>
-
-  </div>
-
-</section>
- -->
 
 <!-- <section class="gallery" id="gallery">
 
@@ -647,8 +629,8 @@
       <h3>quick links</h3>
       <a href="#home">home</a>
       <a href="#services">services</a>
+      <a href="#works">works</a>
       <a href="#gallery">gallery</a>
-      <a href="#review">review</a>
       <a href="#contact">contact</a>
     </div>
 
