add Learn section (video)

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         </li>
 
         <li class="nav-item">
+          <a class="nav-link" href="#learn" tabindex="-1" aria-disabled="true">Learn</a>
+        </li>
+
+        <li class="nav-item">
           <a class="nav-link" href="#contact" tabindex="-1" aria-disabled="true">Cotact us</a>
         </li>
       </ul>
@@ -256,42 +260,42 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="assets/4.jpg" alt="Third slide">
+        <img class="d-block w-100" src="assets/4.jpg" alt="fourth slide">
         <div class="carousel-caption d-none d-md-block">
           <h5>fourth image</h5>
           <p>this is my fourth image</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="assets/5.jpg" alt="Third slide">
+        <img class="d-block w-100" src="assets/5.jpg" alt="fifth slide">
         <div class="carousel-caption d-none d-md-block">
           <h5>fifth image</h5>
           <p>this is my fifth image</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="assets/6.jpg" alt="Third slide">
+        <img class="d-block w-100" src="assets/6.jpg" alt="sixth slide">
         <div class="carousel-caption d-none d-md-block">
           <h5>sixth image</h5>
           <p>this is my sixth image</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="assets/7.jpg" alt="Third slide">
+        <img class="d-block w-100" src="assets/7.jpg" alt="seventh slide">
         <div class="carousel-caption d-none d-md-block">
           <h5>seventh image</h5>
           <p>this is my seventh image</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="assets/8.jpg" alt="Third slide">
+        <img class="d-block w-100" src="assets/8.jpg" alt="eighth slide">
         <div class="carousel-caption d-none d-md-block">
           <h5>eighth image</h5>
           <p>this is my eighth image</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="assets/9.jpg" alt="Third slide">
+        <img class="d-block w-100" src="assets/9.jpg" alt="ninth slide">
         <div class="carousel-caption d-none d-md-block">
           <h5>ninth image</h5>
           <p>this is my ninth image</p>
@@ -364,6 +368,22 @@
       <p>Click on picture to see it in full size form</p>
     </div>
   
+  
+</section>
+
+<section class="learn" id="learn">
+  <h1 class="heading">
+    <span>L</span>
+    <span>E</span>
+    <span>A</span>
+    <span>R</span>
+    <span>N</span>
+  </h1>
+
+  <div class="h_iframe-aparat_embed_frame video-responsive">
+    <span style="display: block;padding-top: 57%"></span>
+    <iframe src="https://www.aparat.com/video/video/embed/videohash/eFGnz/vt/frame?titleShow=true"  allowFullScreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+  </div>
   
 </section>
 
